[metadata]
name = py_package
version = 0.0.1
description = py package test 
license = MIT
platforms = win7/win8/win10-64bit
keywords = test

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	requests
	importlib-metadata; python_version < "3.8"

[options.packages.find]
include = py_package